2000-08-13  Dan Winship  <danw@helixcode.com>

	* providers/nntp/Makefile.am (libcamelnntpinclude_HEADERS): Add
	camel-nntp-utils.h

	* providers/imap/camel-imap-folder.c
	(imap_get_subfolder_names_internal): do a strcasecmp rather than
	just a strcmp when checking if a folder is "INBOX", since it is
	a case-insensitive name.

2000-08-12  Dan Winship  <danw@helixcode.com>

	* providers/imap/camel-imap-folder.c (imap_get_summary_internal):
	Don't assume the FETCH results will come back in the order they
	were requested.
	(imap_get_subfolder_names_internal): Add "INBOX" to the list as
	g_malloc'ed memory, not a static string.

2000-08-12  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c
	(camel_imap_command_continuation): Now takes a char * parameter
	rather than a stream
	(camel_imap_command_continuation_with_stream): Same function as
	above but takes a stream parameter instead

	* providers/imap/camel-imap-folder.c (imap_append_message): Use
	camel_imap_command_continuation_with_stream

2000-08-12  Dan Winship  <danw@helixcode.com>

	* providers/pop3/camel-pop3-store.c (pop3_try_authenticate): New
	function to do one round of attempted authentication.
	(pop3_connect): Move a bunch of code out into
	pop3_try_authenticate and fix some bugs in the edge cases.

2000-08-12  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (query_auth_types): No longer
	calls try_connect() to get authtypes

2000-08-11  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c
	(camel_imap_command_continuation): Changed param order a bit and
	fixed some logic

	* providers/imap/camel-imap-folder.c (imap_append_message): Use
	the new multi-transactional convenience functions

2000-08-11  Jeffrey Stedfast  <fejj@helixcode.com>
	
	* providers/imap/camel-imap-store.c
	(camel_imap_command_preliminary): New convenience function for
	multi-transactional commands (opening request)