@@ -1,3 +1,8 @@
+2000-08-14  Peter Williams  <peterw@helixcode.com>
+
+	* e-sexp.c (scanner_config): Add "-" to be an acceptable
+	first character for an operation -- yaaay subtraction!
+
 2000-08-11  Peter Williams  <peterw@helixcode.com>
 
 	* e-html-utils.c (e_text_to_html): Fix the tab expansion
