@@ -1,3 +1,13 @@
+2000-08-14  Peter Williams  <peterw@helixcode.com>
+
+	* camel-folder-search.c (search_get_sent_date): New search function;
+	returns the time_t when the message was sent.
+	(search_get_receive_date): Same for when it was received.
+	(search_get_current_date): Gets the current time for use with the
+	above two. Is this in the right place?
+
+	* camel-folder-search.h: Add the new functions above to the class.
+
 2000-08-13  Dan Winship  <danw@helixcode.com>
 
 	* providers/nntp/Makefile.am (libcamelnntpinclude_HEADERS): Add
